# configs

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  10-udisks2.rules  30-kbd-ptr.conf  50-synaptics.conf  60-synaptics.conf  README  VirtualBox-SKIP-UpdateCheck.txt  _vimrc  archlinux-alsa-sdl.txt  awesome-xsession  capslock-as-ctrl.sh  compile_commands_json_incdirs.py  debian-rpi4-config.txt  default-www-browser-xdg-open.sh  direnvrc  dnf-faster.sh  docbrow.lyt  dosbox-rpi3.conf  dot-Rprofile  dot-abcde.conf  dot-asoundrc  dot-direnvrc  dot-direnvrc-poetry  dot-lambda-term-inputrc  dot-my-gtk-tim-btns.pl  dot-my-time-btns.pl  eclipse-snippets.xml  eclrc  find-subdirs-2+.sh  firefox-nightly.desktop  fonts.conf  foo.txt  gitconfig  hdd-power-off.service  hgrc  hsetroot-solid.pl  installed-dpkg-sizes.rb  (+54 more)
archive/: 20-intel.conf  direnvrc  dot-Rprofile  dot-emacs-2021.el  find-pkgconfig.sh  fonts.conf  install.sh  iptables.rules  jvm-nabi.sh  mplayer.config  pa-in2out.sh  redshift.conf  rsync-books-freebsd.sh  vim+iterm+tmux.org  working-ffmpeg.sh
ctags/: zig.ctags
direnv-poetry/: dot-direnvrc
dotfiles/: +apply+.pl  .perlcriticrc  README.org  TODOs.txt  _inst-symlinks.sh  _inst.pl  _inst.sh  apply.pl  apply.sh  bash_login.bash  bash_profile.bash  bashrc.bash  cpanfile  cpanfile.snapshot  ctags  dirs.config  dump-dot-uses.sh  emacs-yas.pl  fb-pkgs.sh  find+fix-symlinks.sh  fix-abs-symlink.pl  input-remapper  list-all.sh  list-symlinks.bash  list-uses.sh  omz-plugins.pl  zlogin.bash  zshrc.bash
dotfiles-p/: arch-macbookair.txt  symlinks-jhyun-samsung.txt
emacs/: TODOs.org  abbrev_defs  apt-emacs.sh  as-ide.el  auctex.el  c++-ccls.el  c++-light-2021.el  c++-light-2022.el  c++.el  c-c++-gtags+rtags.el  c-c++-gtags.el  c-c++-rtags.el  cal-dt.el  clojure.el  compile-commands-json.el  cpp+gtags.el  day-and-night.el  dot-emacs  dot-emacs-2010-11-20  dot-emacs-20110817  dot-emacs-20120126.el  dot-emacs-2012apr08sun.el  dot-emacs-2012apr11wed.el  dot-emacs-2012may06sun-w32.el  dot-emacs-2012may20sun.el  dot-emacs-2012nov10sat.el  dot-emacs-2013Jan26Sat.el  dot-emacs-2014Aug24Sun-geiser.el  dot-emacs-2014Mar02Sun-geiser+racket.el  dot-emacs-2014Mar02Sun.el  dot-emacs-2014Sep30Tue-1940  dot-emacs-2018  dot-emacs-2019  dot-emacs-2021.el  dot-emacs-cmake-ide.el  dot-emacs-mswin-2013Jan10Thu.el  dot-mini-emacs-2019  dot-mini-emacs-2021  dot-mini-emacs-2023  e-2025.el  (+49 more)
emacs-archive/: c-c++-gtags+rtags.el  god-mode.el
freebsd-e502ma/: 20-intel.conf  dot-uses.txt  smb4.conf  xinitrc2
freebsd-nat/: dhcpd.conf  inst.sh  pf.conf  rc.conf  rc.local  sysctl.conf
git/: gitconfig
i3wm/: caps-to-ctrl.sh  compton.conf  debian-icewm-startup.sh  dot-i3blocks.conf  dot-xbindkeysrc  dot-xbindkeysrc.scm  i3.config  i3lock@.service  rofi  wg.pl  (+14 more)
mods/c-scripts-rofi/: .gitignore  CMakeLists.txt  LICENSE  README.md
mods/c-scripts-rofi/include/: argp.h  db.h  errmsg.h  externc.h  file_find.h  macrofun.h  strs.h
mods/c-scripts-rofi/scripts/: cmake-debug.sh  cmake-release.sh
mods/c-scripts-rofi/src/: argp.c  db+rofi.c  db.c  file_find.c  main_aux.c  main_cleanup.c  main_exec.c  main_select_script.c  rofi.c  rofi_ask_yn.c  rofi_show_error.c
mods/c-scripts-rofi/tests/: hello.test  tcommon-1.0.tm
mods/c-scripts-rofi/vnd/uthash/doc/: ChangeLog.txt  utlist.txt  utringbuffer.txt  utstack.txt
mods/c-scripts-rofi/vnd/uthash/src/: utarray.h  utlist.h  utringbuffer.h  utstring.h
mods/c-scripts-rofi/vnd/uthash/tests/: Makefile  hashscan.c  test63.ans  test63.c
(+808 files in other folders)
